# finance

./: .gitignore  README.md  README.org  finance.cabal  fourmolu.yaml  shell.nix  transactions.fin
exe/: Main.hs
src/: MyLib.hs
src/Finance/: Commands.hs  Core.hs  Input.hs  ParseBudgetYaml.hs  PrettyPrint.hs  Types.hs  Utils.hs
src/Finance/TUI/: App.hs  Types.hs
