cabal-version:      3.0
name:               finance
version:            0.1.0.0
author:             Jake B
build-type:         Simple

common warnings
    ghc-options:
        -Wwarn
        -Widentities
        -Wunused-packages
    default-extensions: ScopedTypeVariables, TypeSynonymInstances, FlexibleInstances, InstanceSigs, OverloadedStrings

library
    import:           warnings
    exposed-modules:  Finance.Core, Finance.Commands, Finance.Types, Finance.Utils, Finance.Input
    build-depends:    base
        , bytestring
        , parsec
        , text
        , time
        , bytestring
        , containers
        , optparse-applicative
        , Decimal
        , cassava
        , vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable finance
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base
        , optparse-applicative
        , finance

    hs-source-dirs:   exe
    default-language: Haskell2010
