cabal-version:      3.0
name:               finance
version:            0.1.0.0
author:             Jake B
build-type:         Simple

common warnings
    ghc-options:
        -Wwarn
        -Widentities
        -Wunused-packages
    default-extensions: ScopedTypeVariables, TypeSynonymInstances, FlexibleInstances, InstanceSigs, OverloadedStrings, OverloadedRecordDot, DeriveGeneric, LambdaCase, NamedFieldPuns

library
    import:           warnings
    exposed-modules:  Finance.Core, Finance.Commands, Finance.Types, Finance.Utils, Finance.Input, Finance.PrettyPrint, Finance.ParseBudgetYaml
    build-depends:    base
        , Decimal
        , aeson
        , bytestring
        , cassava
        , containers
        , mtl
        , optparse-applicative
        , parsec
        , scientific
        , text
        , time
        , vector
        , yaml
    hs-source-dirs:   src
    default-language: Haskell2010

executable finance
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
        , optparse-applicative
        , finance
    hs-source-dirs:   exe
    default-language: Haskell2010
