cabal-version:      3.0
name:               finance
version:            0.1.0.0
author:             Jake B
build-type:         Simple

common library
    ghc-options:
        -Werror
        -Widentities
        -Wunused-packages
        -threaded
    default-extensions: ScopedTypeVariables, TypeSynonymInstances, FlexibleInstances, InstanceSigs, OverloadedStrings, OverloadedRecordDot, DeriveGeneric, LambdaCase, NamedFieldPuns, DeriveGeneric

library
    import:           library
    exposed-modules:  Finance.Commands
    other-modules: Finance.Core, Finance.Types, Finance.Utils, Finance.Input, Finance.PrettyPrint, Finance.ParseBudgetYaml, Finance.TUI.Types, Finance.TUI.App
    build-depends:    base
        , Decimal
        , aeson
        , brick >= 1.0
        , bytestring
        , cassava
        , containers
        , microlens
        , microlens-mtl
        , microlens-th
        , mtl
        , optparse-applicative
        , parsec
        , scientific
        , text
        , time
        , vector
        , vty >= 5.0
        , yaml
    hs-source-dirs:   src
    default-language: Haskell2010

executable finance
    import:           library
    main-is:          Main.hs
    build-depends:    base
        , optparse-applicative
        , finance
    hs-source-dirs:   exe
    default-language: Haskell2010
